Refactor the code so its more readable. Sort out the logging dependencies so we can log using apache logging